build/kubernetes/k8s-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ---NAMESPACE---
  name: ---APP_NAME---
  labels:
    app: ---APP_NAME---
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ---APP_NAME---
  template:
    metadata:
      labels:
        app: ---APP_NAME---
    spec:
      containers:
        - name: ---APP_NAME---
          image: "---IMAGE---"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: ---PORT---
          startupProbe:
            httpGet:
              path: /
              port: ---PORT---
            failureThreshold: 60
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: ---PORT---
            failureThreshold: 2
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /
              port: ---PORT---
            initialDelaySeconds: 1
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  namespace: ---NAMESPACE---
  name: ---APP_NAME----svc
  labels:
    app: ---APP_NAME---
spec:
  ports:
    - port: ---PORT---
      targetPort: ---PORT---
  selector:
    app: ---APP_NAME---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ---NAMESPACE---
  name: ---APP_NAME----ingress
spec:
  rules:
    - host: ---HOST---
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ---APP_NAME----svc
                port:
                  number: ---PORT---
